--- a/app/views/tickets/_form.html.erb
+++ b/app/views/tickets/_form.html.erb
@@ -22,7 +22,7 @@
 
   <div class="field left" style="padding-top: 20px; padding-bottom: 10px;">
   Order to:
-    <%= f.select :tecnic_id,   User.where("level = ? and admin_level = ?", current_user.level, true).collect {|p| [ p.name, p.id ] } %>
+    <%= f.select :tecnic_id,   User.where("level_authority <= ? and admin_level_authority = ?", current_user.level_authority, true).collect {|p| [ p.name, p.id ] } %>
   </div>
 
   <div class="field left" style="padding-top: 10px; padding-bottom: 20px;">
