--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -4,12 +4,12 @@
     <div class="row">
      <h1 class="entry-title col-md-9"><%= @ticket.title %></h1>
      <div class=" col-md-3 right"> 
-      <button type="button" class="btn background-turquesa btn-md center margin-bottom-page" style="margin-top: 10%; font-size: 16px;">
+      <button type="button" class="btn background-turquesa btn-md center margin-bottom-page" style="margin-top: 10%; font-size: 16px;" id="edit_button">
         <%= link_to 'Edit Ticket', edit_ticket_path(@ticket) if current_user.app_admin?%> 
       </button>
     </div>
   </div>
-        <p><strong class="entry-content-gray">Code:</strong> <label style="font-size: 16px;"><%= @ticket.id%></label></p>
+        <p><strong class="entry-content-gray">Code:</strong> <label style="font-size: 16px;"><%= @ticket.id%> <%= @ticket.level%></label></p>
         <p><strong class="entry-content-gray">Created by:</strong><label style="font-size: 16px;"><%=@ticket.user.name%></label></p>
         <p><strong class="entry-content-gray">Open date:</strong> <label style="font-size: 16px;"><%=@ticket.created_at.strftime("%d %B %Y")%></label></p>
         <strong class="entry-content-gray">Responsible:</strong> <label style="font-size: 16px;"><%= @tecnic.name%></label>
@@ -61,3 +61,9 @@
     <%=render "comments/form" if current_user.app_admin?%>
 </div>
   </div>
+<%if(current_user.level_authority < 2)%>
+  <script type="text/javascript">
+  $('#edit_button').hide();
+  </script>
+  <%end%>
+
