--- a/app/views/priorities/index.html.erb
+++ b/app/views/priorities/index.html.erb
@@ -22,7 +22,7 @@
             <div class= "form-group string optional priority_color">
               <div class=" minicolors minicolors-theme-maria minicolors-position-bottom minicolors-position-left minicolors-focus">
                 <span class="minicolors-swatch minicolors-sprite minicolors-input-swatch">
-                  <span class="minicolors-swatch-color" style="background-color: <%=priority.color%>;"></span>
+                  <span class="minicolors-swatch-color" style="background-color: #<%=priority.color%>;"></span>
                 </span>
               </div>
             </div>
