--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -14,7 +14,8 @@
   <div class="row">
     <% group.compact.each do |ticket| %>
       <div class="col-md-4">
-        <div class="well" style="background: <%=  @priority.find(ticket.priority_id).color%>;" id="well_ticket" >
+        <div class="well" style="background: <%=  @priority.find(ticket.priority_id).color%>; 
+          <%if  @ticket.tecnic_id == current_user.id%> border: 1px solid gray; <%end%>" >
         <h2 class="entry-subtitle"><%= link_to ticket.id, ticket %> - <%= link_to ticket.title, ticket %></h2>
         <p class="content-ticket"><%= ticket.content %> <p>
       </div>
@@ -30,4 +31,3 @@
       <button class="btn" type="submit">Search</button>
    <% end %>
 </p>
-
