--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -74,6 +74,7 @@
   </script>
   <%end%>
 
+<%if(current_user.level_authority == 2)%>
   <%if(current_user.id != @ticket.tecnic_id)%>
   <script type="text/javascript">
     $('#edit_button').hide();
@@ -86,4 +87,40 @@
     $('#close_button').hide();
   </script>
   <%end%>
+  <%end%>
 
+  <%if(@ticket.level > 2)%>
+  <script type="text/javascript">
+    $('#upgrade_button').hide();
+  </script>
+  <%end%>
+
+  <%if(@ticket.priority_id == 5)%>
+  <script type="text/javascript">
+    $('#more_priority_button').hide();
+  </script>
+  <%end%>
+
+  <%if(@ticket.priority_id == 1)%>
+  <script type="text/javascript">
+    $('#less_priority_button').hide();
+  </script>
+  <%end%>
+
+<%if(@ticket.status_id == 3)%>
+  <script type="text/javascript">
+    $('#edit_button').hide();
+    $('#new_comment').hide();
+    $('#text_new_comment').hide();
+    $('#upgrade_button').hide();
+    $('#more_priority_button').hide();
+    $('#less_priority_button').hide();
+    $('#close_button').hide();
+  </script>
+  <%end%>
+  
+  <%if(@ticket.status_id == 2)%>
+  <script type="text/javascript">
+    $('#proc_button').hide();
+  </script>
+  <%end%>
