upgrade view comments

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -297,3 +297,10 @@ header nav a:hover { /*rodear elementos header*/
   width: 52px;
   height: 30px;
 }
+
+.border-comment{
+  background-color:#eee;
+  border: 1px solid rgba(136, 136, 136, 0.32);
+  border-radius:3px;
+  padding: 7px;
+}
