comments with time

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -304,3 +304,8 @@ header nav a:hover { /*rodear elementos header*/
   border-radius:3px;
   padding: 7px;
 }
+
+.background-login{
+  background-color: white;
+  position: absolute;
+} 
