--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -187,6 +187,7 @@ header nav a:hover { /*rodear elementos header*/
     letter-spacing: 1px;
     color: #5DC1B9;
     text-align: left;
+    font-family: monospace;
 }
 
 .right{
