--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -53,7 +53,7 @@
 <div class="field ">
     <%@ticket.comments.each do |comment|%>
     <div class="border-comment" style="font-size: 15px;"> 
-        <p><strong class="entry-content-gray">Open date:</strong> <label><%=comment.created_at.strftime("%d %B %Y")%></label></p>
+        <p> <label><%=comment.created_at.strftime("%d %B %Y")%></label></p>
 
       <b><%= comment.user.name%>:</b> <%= comment.content%> </div>
   </br>
