--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
 </head>
 <body>
   <% if user_signed_in? %>
-  <header class= "navbar navbar-default navbar-fixed-top turquesa" data-role="header">
+  <header class= "navbar navbar-default navbar-fixed-top turquesa">
     <div class="container">   
         <div class = "navbar-header logo">  
             <%= link_to "Thoughtrack", home_index_path%>
@@ -36,7 +36,7 @@
   <%end%>
 
 
-<div class= "container" data-role="main"> 
+<div class= "container"> 
   <% if notice %>
     <p class="alert alert-success"><%= notice %></p>
   <% end %>
