--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
 </head>
 <body>
   <% if user_signed_in? %>
-  <header class= "navbar navbar-default navbar-fixed-top turquesa">
+  <nav class= "navbar navbar-default navbar-fixed-top background-turquesa">
     <div class="container">   
         <div class = "navbar-header logo">  
             <%= link_to "Thoughtrack", home_index_path%>
@@ -32,7 +32,7 @@
         <% end %>
         </nav>
     </div>
-  </header>
+  </nav>
   <%end%>
 
 
