--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,25 @@
 <body>
   <% if user_signed_in? %>
   <nav class= "navbar navbar-default navbar-fixed-top background-turquesa">
+    <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <div class="navbar-brand"><%= link_to "Thoughtrack", home_index_path%></div>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse">
+      <ul class="nav navbar-nav navbar-right">
+        <% if user_signed_in? %>
+          <li>Logged in as <strong><%= current_user.name%></strong></li>
+          <li><%= link_to "Admin Panel", admin_users_path if current_user.app_admin? %></li>
+          <li><%= link_to "log out", destroy_user_session_path, method: :get %></li>
+        <% end %>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+  </nav>
+
     <div class="container">   
         <div class = "navbar-header logo">  
             <%= link_to "Thoughtrack", home_index_path%>
@@ -32,7 +51,6 @@
         <% end %>
         </nav>
     </div>
-  </nav>
   <%end%>
 
 
