--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,8 +19,8 @@
 </head>
 <body>
   <% if user_signed_in? %>
-  <nav class= "navbar navbar-default navbar-fixed-top background-turquesa">
-    <div class="container-fluid">
+<nav class="navbar navbar-default navbar-static-top background-turquesa">
+  <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
