--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,12 +25,11 @@
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
-        <% if user_signed_in? %>
-        <span class="icon-bar"> <%= link_to "Admin Panel", admin_users_path if current_user.app_admin? %></span>
-        <span class="icon-bar"> <%= link_to "log out", destroy_user_session_path, method: :get %></span>
-        <% end %>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
       </button>
-      <div><%= link_to "Thoughtrack", home_index_path%></div>
+      <div class="navbar-brand" ><%= link_to "Thoughtrack", home_index_path%></div>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
