pruebas reader mvl

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,18 +33,22 @@
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+    <div class="navbar-collapse collapse in " aria-expanded="true">
+      <ul class="nav navbar-nav">
+        <li class="active"><a>Logged in as <strong><%= current_user.name%></strong></a></li>
+      </ul>
       <ul class="nav navbar-nav navbar-right">
-        <% if user_signed_in? %>
-        <li> Logged in as <strong><%= current_user.name%></strong></li>
         <li> <%= link_to "Admin Panel", admin_users_path if current_user.app_admin? %></li>
         <li> <%= link_to "log out", destroy_user_session_path, method: :get %></li>
-        <% end %>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
   <%end%>
+
+
+
+
 
 <div class= "container"> 
   <% if notice %>
