--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -1,4 +1,4 @@
-<i class="fa fa-chevron-left fa-lg back left"> <label style="font-family: monospace;"><%= link_to 'Back', tickets_path %></label></i>
+<i class="fa fa-chevron-left fa-lg back left"><%= link_to 'Back', tickets_path %></i>
   <div class="ticket-size">
     <div class="row">
      <h1 class="entry-title col-md-9"><%= @ticket.title %></h1>
