--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <div class="logo" ><%= link_to "Thoughtrack", home_index_path%></div>
+      <div class="navbar-brand"><%= link_to "Thoughtrack", home_index_path%></div>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
