--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
 <body>
   <% if user_signed_in? %>
 <nav class="navbar navbar-default navbar-static-top background-turquesa">
-  <div class="container-fluid">
+  <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbart" aria-expanded="false">
@@ -38,14 +38,16 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a>Logged in as <strong><%= current_user.name%></strong><span class="sr-only">(current)</span></a></li>
+        <li> <%= link_to "Tickets", tickets_path if current_user.app_admin? %></li>
+        <li> <%= link_to "Closed Tickets", home_path(1) if current_user.app_admin? %></li>
         <li> <%= link_to "Admin Panel", admin_users_path if current_user.app_admin? %></li>
+        <li> <%= link_to "Edit Priorities", priorities_path if current_user.app_admin? %></li>
         <li> <%= link_to "log out", destroy_user_session_path, method: :get %></li>
       </ul>
     </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
+  </div><!-- /.container -->
 </nav>
   <%end%>
-
 
 
 
