--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,20 +5,19 @@
 <div class="col-md-6">
 
 <h2 class="entry-content">
-<%= link_to 'Tickets', tickets_path %>
+<i class="fa fa-ticket fa-2x"><%= link_to 'Tickets', tickets_path %></i>
 </h2>
 <h2 class="entry-content">
-<%= link_to 'Closed Tickets', home_path(1)%>
+<i class="fa fa-pencil fa-2x"><%= link_to 'Edit Priorities', priorities_path if current_user.app_admin? %></i>
 </h2>
 </div>
 <div class="col-md-6">
 
+
 <h2 class="entry-content">
-<%= link_to 'Edit Priorities', priorities_path %>
+<i class="fa fa-times fa-2x"><%= link_to 'Closed Tickets', home_path(1)%></i>
 </h2>
 
 
-
 </div>
 </div>
-
