--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,11 +38,9 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a>Logged in as <strong><%= current_user.name%></strong><span class="sr-only">(current)</span></a></li>
-        <li> <%= link_to "Tickets", tickets_path if current_user.app_admin? %></li>
-        <li> <%= link_to "Closed Tickets", home_path(1) if current_user.app_admin? %></li>
+        <li> <%= link_to "Home", home_path %></li>
         <li> <%= link_to "Admin Panel", admin_users_path if current_user.app_admin? %></li>
-        <li> <%= link_to "Edit Priorities", priorities_path if current_user.app_admin? %></li>
-        <li> <%= link_to "log out", destroy_user_session_path, method: :get %></li>
+        <li> <%= link_to "Log out", destroy_user_session_path, method: :get %></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container -->
