--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,7 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a>Logged in as <strong><%= current_user.name%></strong><span class="sr-only">(current)</span></a></li>
-        <li> <%= link_to "Home", home_path %></li>
+        <li><i class="fa fa-home"> <%= link_to "Home", root_path %> </i></li>
         <li> <%= link_to "Admin Panel", admin_users_path if current_user.app_admin? %></li>
         <li> <%= link_to "Log out", destroy_user_session_path, method: :get %></li>
       </ul>
