--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -310,3 +310,8 @@ header nav a:hover { /*rodear elementos header*/
   height: 30px;
 }
 
+.header-icon{
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
