--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -195,10 +195,11 @@ header nav a:hover { /*rodear elementos header*/
 .back{
   padding-top: 20px;
   font-weight: 300;
-    font-size: 20px;
-    letter-spacing: 1px;
-    color: #5DC1B9;
-    text-align: left;
+  font-size: 20px;
+  letter-spacing: 1px;
+  color: #5DC1B9;
+  text-align: left;
+  font-family: "Roboto Condensed","Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 .right{
