--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,7 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a>Logged in as <strong><%= current_user.name%></strong><span class="sr-only">(current)</span></a></li>
-        <li><i class="fa fa-home fa-lg back header-icon"> <%= link_to "Home", root_path %> </i></li>
+        <li><i class="fa fa-home fa-lg back header-icon"><label class="letter"> <%= link_to "Home", root_path %></label> </i></li>
         <%if current_user.app_admin?%><li class="header-icon"><i class="fa fa-cog fa-lg back "> <%= link_to "Admin Panel", admin_users_path %> </i></li><%end%>
         <li class="header-icon"><i class="fa fa-sign-out fa-lg back"><%= link_to "Log out", destroy_user_session_path, method: :get %></i></li>
       </ul>
