--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -199,7 +199,6 @@ header nav a:hover { /*rodear elementos header*/
   letter-spacing: 1px;
   color: #5DC1B9;
   text-align: left;
-  font-family: "Roboto Condensed","Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 .right{
@@ -315,3 +314,6 @@ header nav a:hover { /*rodear elementos header*/
   padding-left: 20px;
 }
 
+.letter{
+    font-family: "Roboto Condensed","Helvetica Neue", Helvetica, Arial, sans-serif;
+}
