--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,8 +39,8 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a>Logged in as <strong><%= current_user.name%></strong><span class="sr-only">(current)</span></a></li>
         <li><i class="fa fa-home fa-lg back header-icon"><label class="letter"> <%= link_to "Home", root_path %></label> </i></li>
-        <%if current_user.app_admin?%><li class="header-icon"><i class="fa fa-cog fa-lg back "> <%= link_to "Admin Panel", admin_users_path %> </i></li><%end%>
-        <li class="header-icon"><i class="fa fa-sign-out fa-lg back"><%= link_to "Log out", destroy_user_session_path, method: :get %></i></li>
+        <%if current_user.app_admin?%><li class="header-icon"><i class="fa fa-cog fa-lg back "><label class="letter"> <%= link_to "Admin Panel", admin_users_path %></label> </i></li><%end%>
+        <li class="header-icon"><i class="fa fa-sign-out fa-lg back"><label class="letter"><%= link_to "Log out", destroy_user_session_path, method: :get %></label></i></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container -->
