--- a/app/views/priorities/show.html.erb
+++ b/app/views/priorities/show.html.erb
@@ -1,4 +1,4 @@
-<i class="fa fa-chevron-left fa-lg back left"> <%= link_to 'Back', :back %></i>
+<i class="fa fa-chevron-left fa-lg back left"><label class="letter"> <%= link_to 'Back', :back %> </label></i>
 
 <h1 class="entry-title center">Priority <%= @priority.name %></h1>
 
