--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -315,5 +315,5 @@ header nav a:hover { /*rodear elementos header*/
 }
 
 .letter{
-    font-family: "Roboto Condensed","Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
