--- a/app/views/tickets/new.html.erb
+++ b/app/views/tickets/new.html.erb
@@ -1,6 +1,6 @@
 <i class="fa fa-chevron-left fa-lg back left"> <%= link_to 'Back', tickets_path %></i>
 
 <div class="center-entry-content">
-	<h1 class="entry-title">New Task</h1>
+	<h1 class="entry-title">New Ticket</h1>
 	<%= render "form"%>
 </div>
