--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,19 +5,25 @@
 <div class="col-md-6">
 
 <h2 class="entry-content">
-<i class="fa fa-ticket fa-lg back"><%= link_to 'Tickets', tickets_path %></i>
+<i class="fa fa-ticket fa-lg back"><%= link_to 'All Tickets', tickets_path %></i>
 </h2>
+
 <h2 class="entry-content">
-<%if current_user.app_admin?%><i class="fa fa-pencil fa-lg back"><%= link_to 'Edit Priorities', priorities_path%></i><%end%>
+<i class="fa fa-times fa-lg back"><%= link_to 'Closed Tickets', home_path(1)%></i>
 </h2>
 </div>
 <div class="col-md-6">
 
 
 <h2 class="entry-content">
-<i class="fa fa-times fa-lg back"><%= link_to 'Closed Tickets', home_path(1)%></i>
+<i class="fa fa-plus fa-lg back"><%= link_to 'New Ticket', new_ticket_path %></i>
+</h2>
+<h2 class="entry-content">
+<%if current_user.app_admin?%><i class="fa fa-pencil fa-lg back"><%= link_to 'Edit Priorities', priorities_path%></i><%end%>
 </h2>
 
 
+
 </div>
 </div>
+
