--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -317,3 +317,20 @@ header nav a:hover { /*rodear elementos header*/
 .letter{
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
+
+.Montserrat{
+  font-family: 'Montserrat', sans-serif;
+}
+
+
+  
+
+
+.vh {
+    align-items: center;
+    display: flex;
+}
+.vh > li {
+    text-align: center;
+    vertical-align: middle;
+}
