--- a/app/views/priorities/index.html.erb
+++ b/app/views/priorities/index.html.erb
@@ -1,4 +1,4 @@
-<i class="fa fa-chevron-left fa-lg back left"> <%= link_to 'Back', home_index_path %></i>
+<i class="fa fa-chevron-left fa-lg back left"><label class="Montserrat"> <%= link_to 'Back', :back %></lable></i>
 
 <h1 class="entry-title center">Listing Priorities</h1>
 <div class="col-lg-4 center-block">
