--- a/app/views/tickets/new.html.erb
+++ b/app/views/tickets/new.html.erb
@@ -1,4 +1,4 @@
-<i class="fa fa-chevron-left fa-lg back left"> <%= link_to 'Back', tickets_path %></i>
+<i class="fa fa-chevron-left fa-lg back left"><label class="Montserrat"> <%= link_to 'Back', :back %></lable></i>
 
 <div class="center-entry-content">
 	<h1 class="entry-title">New Ticket</h1>
